--- a/resources/conf/server.yml
+++ b/resources/conf/server.yml
@@ -1,3 +1,4 @@
-Host: localhost
-Port: 8081
-BaseURL: "http://localhost:8081"
+http:
+  Host: localhost
+  Port: 8081
+  BaseURL: "http://localhost:8081"
