--- a/resources/conf/server.yml
+++ b/resources/conf/server.yml
@@ -4,9 +4,10 @@ http:
   BaseURL: "http://localhost:8081"
 smtp:
   From: no-reply@g-node.org
+  Username:
   Password:
   Host: mx1.g-node.org
-  Port: 25
+  Port: 587
 # Supported values of Mode are: print and skip; in any other case e-mails will be sent.
 #   Print will write the content of any e-mail to the commandline / log
 #   Skip will skip over any e-mail sending process
