captcha: add captcha dependency for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ install:
  - go get github.com/gorilla/mux
  - go get github.com/gorilla/handlers
  - go get github.com/docopt/docopt-go
+ - go get github.com/dchest/captcha
 
 before_script:
  - psql -c "CREATE ROLE test WITH LOGIN PASSWORD 'test';" -U postgres
