[resources] update client.yml

--- a/resources/conf/clients.yml
+++ b/resources/conf/clients.yml
@@ -2,12 +2,14 @@
   Name: gin
   Secret: secret
   ScopeProvided:
+    account-create: Create an account
     account-read: Read access to your account data
     account-write: Write access to your account data
-    account-admin: Administrator access to accounts.
+    account-admin: Administrator access to accounts
     repo-read: Read access to your repositories and repositories shared with you
-    repo-write: Write acces to your repositories and repositories you have write access to
+    repo-write: Write access to your repositories and repositories you have write access to
   ScopeWhitelist:
+    - account-create
     - account-read
     - account-write
     - repo-read
@@ -16,6 +18,7 @@
     - account-admin
   RedirectURIs:
     - http://localhost:8080/oauth/login
+    - http://localhost:8080/notice
 - UUID: 5b2ca112-0ecc-41ff-8315-221024345ab8
   Name: gin-shell
   Secret: secret
